[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridworld-rl-env"
version = "0.1.0"
description = "Gridworld RL environment"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pydantic",
    "openenv-core>=0.2.0"
]

[tool.setuptools]
packages = ["app"]
