[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridworld-openenv"
version = "0.1.0"
description = "OpenEnv Gridworld"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools]
packages = ["server", "app"]
